--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,53 @@
 <html>
     <head>
         <title>Todo App</title>
+        <style>
+            #error {
+                display: none;
+            }
+        </style>
     </head>
     <body>
-        <ul>
+        <p>Todo</p>
+        <div id="error" class="hidden">Something went wrong!</div>
+        <form id="form">
+            <input type="text" id="description" name="description">
+            <input type="submit" value="create">
+        </form>
+        
+
+        <ul id="todos">
             {% for d in data %}
             <li>{{ d.description }}</li>
             {% endfor %}
         </ul>
+        <script>
+            document.getElementById('form').onsubmit = function(e) {
+                e.preventDefault();
+                fetch('/todos/create', {
+                    method: 'POST',
+                    body: JSON.stringify({
+                        'description': document.getElementById('description').value
+                    }),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                })
+                .then(function(response) {
+                    return response.json();
+                })
+                .then(function(jsonResponse) {
+                    console.log(jsonResponse);
+                    const liItem = document.createElement('LI');
+                    liItem.innerHTML = jsonResponse['description'];
+                    document.getElementById('todos').appendChild(liItem);
+                    document.getElementById('error').className= 'hidden';
+                })
+                .catch(function() {
+                    document.getElementById('error').className= '';
+                })
+            }
+
+        </script>
     </body>
 </html>
