--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,23 @@
             #error {
                 display: none;
             }
+            ul {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                width: 200px;
+            }
+            li {
+                clear: both;
+            }
+
+            li button {
+                -webkit-appearance: none;
+                border: none;
+                outline: none;
+                color: red;
+                float: right;
+            }
         </style>
     </head>
     <body>
@@ -18,10 +35,57 @@
 
         <ul id="todos">
             {% for d in data %}
-            <li>{{ d.description }}</li>
+            <li>
+                <input class="check-completed" data-id="{{ d.id }}" 
+                type="checkbox" {% if d.completed %} checked
+                {% endif %} />
+                {{ d.description }}
+                <button class="button" data-id="{{ d.id }}">&cross;</button>
+            </li>
             {% endfor %}
         </ul>
         <script>
+            const deletBtns = document.querySelectorAll('.button');
+            for (let i = 0; i < deletBtns.length; i++) {
+                const deletBtn = deletBtns[i];
+                deletBtn.onclick = function(e) {
+                    const todoId = e.target.dataset['id'];
+                    fetch('/todos/' + todoId, {
+                        method: 'DELETE'
+                    })
+                    .then(function() {
+                        const item = e.target.parentElement;
+                        item.remove();
+                    })
+                }
+
+
+            }
+            const checkBoxes = document.querySelectorAll('.check-completed');
+            for (let i = 0; i < checkBoxes.length; i++) {
+                const checkBox = checkBoxes[i];
+                checkBox.onchange = function(e) {
+                    console.log('event',e);
+                    const newCompleted = e.target.checked;
+                    const todoId = e.target.dataset['id'];
+                    fetch('/todos/' + todoId + '/set-completed', {
+                        method: 'POST',
+                        body: JSON.stringify({
+                            'completed': newCompleted
+                        }),
+                        headers: {
+                            'Content-Type': 'application/json'
+                        }
+                    })
+                    .then(function(){
+                        document.getElementById('error').className= 'hidden';
+                    })
+                    .catch(function(){
+                        document.getElementById('error').className= '';
+                    }) 
+
+                }
+            }
             document.getElementById('form').onsubmit = function(e) {
                 e.preventDefault();
                 fetch('/todos/create', {
